--- a/src/GW2Nexus-AddonTemplate.vcxproj.filters
+++ b/src/GW2Nexus-AddonTemplate.vcxproj.filters
@@ -17,6 +17,10 @@
     <ClCompile Include="imgui\imgui.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
+    <ClCompile Include="Shared.cpp" />
+    <ClCompile Include="Settings.cpp" />
+    <ClCompile Include="evtc_parser.cpp" />
+    <ClCompile Include="utils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imstb_truetype.h">
@@ -39,10 +43,136 @@
     </ClInclude>
     <ClInclude Include="nexus\Nexus.h" />
     <ClInclude Include="mumble\Mumble.h" />
+    <ClInclude Include="resource.h" />
+    <ClInclude Include="Shared.h" />
+    <ClInclude Include="Settings.h" />
+    <ClInclude Include="evtc_parser.h" />
+    <ClInclude Include="utils.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
       <UniqueIdentifier>{b8dcb93b-2947-498a-8c72-51bb322b9742}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Assets">
+      <UniqueIdentifier>{1477a845-03c0-4f84-b5dd-8c0f1d76f48c}</UniqueIdentifier>
+    </Filter>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="Resource.rc" />
+  </ItemGroup>
+  <ItemGroup>
+    <Image Include="assets\berserker_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\bladesworn_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\catalyst_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\chronomancer_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\daredevil_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\deadeye_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\dragonhunter_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\druid_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\engineer_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\elementalist_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\firebrand_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\guardian_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\harbinger_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\holosmith_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\herald_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\mechanist_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\mesmer_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\mirage_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\necromancer_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\ranger_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\reaper_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\renegade_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\revenant_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\scourge_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\scrapper_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\soulbeast_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\specter_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\spellbreaker_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\tempest_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\thief_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\untamed_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\vindicator_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\virtuoso_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\warrior_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\weaver_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\willbender_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\death_16x16.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\downed_24x24.png" />
+    <Image Include="assets\squad_16x16.png" />
   </ItemGroup>
 </Project>
