show title style option

--- a/src/GW2Nexus-AddonTemplate.vcxproj.filters
+++ b/src/GW2Nexus-AddonTemplate.vcxproj.filters
@@ -174,13 +174,19 @@
     <Image Include="assets\death_16x16.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="assets\downed_24x24.png" />
-    <Image Include="assets\damage_18x18.png" />
-    <Image Include="assets\condition_damage_18x18.png" />
     <Image Include="assets\squad_16x16.png">
       <Filter>Assets</Filter>
     </Image>
     <Image Include="assets\strike_damage_30x30.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\condition_damage_18x18.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\damage_18x18.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\downed_24x24.png">
       <Filter>Assets</Filter>
     </Image>
   </ItemGroup>
