--- a/src/WvWFightAnalysis.vcxproj.filters
+++ b/src/WvWFightAnalysis.vcxproj.filters
@@ -192,5 +192,23 @@
     <Image Include="assets\Arena_Proprietor_16x16.png">
       <Filter>Assets</Filter>
     </Image>
+    <Image Include="assets\home_icon.png" />
+    <Image Include="assets\squad_icon.png" />
+    <Image Include="assets\strike_damage_icon.png" />
+    <Image Include="assets\Arena_Proprietor_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\condition_damage_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\damage_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\death_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
+    <Image Include="assets\downed_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
   </ItemGroup>
 </Project>
