--- a/src/WvWFightAnalysis.vcxproj
+++ b/src/WvWFightAnalysis.vcxproj
@@ -188,30 +188,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
     <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
-=======
-    <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
-=======
-    <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
-=======
-    <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
-=======
-    <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
-=======
-    <ClInclude Include="include\gui\BarTemplate.h" />
->>>>>>> Stashed changes
     <ClInclude Include="evtc_parser.h" />
     <ClInclude Include="imgui\imconfig.h" />
     <ClInclude Include="imgui\imgui.h" />
@@ -228,30 +205,7 @@
     <ClInclude Include="resource.h" />
   </ItemGroup>
   <ItemGroup>
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-<<<<<<< Updated upstream
-=======
     <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
-=======
-    <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
-=======
-    <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
-=======
-    <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
-=======
-    <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
-=======
-    <ClCompile Include="src\gui\BarTemplate.cpp" />
->>>>>>> Stashed changes
     <ClCompile Include="entry.cpp" />
     <ClCompile Include="evtc_parser.cpp" />
     <ClCompile Include="gui.cpp" />
@@ -288,6 +242,7 @@
     <Image Include="assets\death_icon.png" />
     <Image Include="assets\downed_24x24.png" />
     <Image Include="assets\downed_icon.png" />
+    <Image Include="assets\down_cont_icon.png" />
     <Image Include="assets\dragonhunter_16x16.png" />
     <Image Include="assets\druid_16x16.png" />
     <Image Include="assets\elementalist_16x16.png" />
@@ -298,6 +253,7 @@
     <Image Include="assets\herald_16x16.png" />
     <Image Include="assets\holosmith_16x16.png" />
     <Image Include="assets\home_icon.png" />
+    <Image Include="assets\kill_cont_icon.png" />
     <Image Include="assets\mechanist_16x16.png" />
     <Image Include="assets\mesmer_16x16.png" />
     <Image Include="assets\mirage_16x16.png" />
