--- a/src/WvWFightAnalysis.vcxproj.filters
+++ b/src/WvWFightAnalysis.vcxproj.filters
@@ -27,6 +27,10 @@
     <ClCompile Include="src\gui\windows\MainWindow.cpp" />
     <ClCompile Include="src\gui\windows\AggregateWindow.cpp" />
     <ClCompile Include="src\gui\windows\WidgetWindow.cpp" />
+    <ClCompile Include="src\parser\boon_strip_tracker.cpp" />
+    <ClCompile Include="src\parser\statistics_helper.cpp" />
+    <ClCompile Include="src\parser\boon_strip_skills.cpp" />
+    <ClCompile Include="src\parser\file_helpers.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="imgui\imstb_truetype.h">
@@ -56,6 +60,10 @@
     <ClInclude Include="include\gui\windows\MainWindow.h" />
     <ClInclude Include="include\gui\windows\WidgetWindow.h" />
     <ClInclude Include="include\gui\windows\AggregateWindow.h" />
+    <ClInclude Include="include\parser\boon_strip_tracker.h" />
+    <ClInclude Include="include\parser\boon_strip_skills.h" />
+    <ClInclude Include="include\parser\statistics_helper.h" />
+    <ClInclude Include="include\parser\file_helpers.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="imgui">
@@ -228,6 +236,11 @@
     <Image Include="assets\kill_cont_icon.png">
       <Filter>Assets</Filter>
     </Image>
-    <Image Include="assets\strips_icon.png" />
+    <Image Include="assets\strips_icon.png">
+      <Filter>Assets</Filter>
+    </Image>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
 </Project>
