--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,10 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+
+# vcpk settings, manifest and dependencies location
+/vcpkg_installed
+/vcpkg_installed
+/vcpkg-configuration.json
+/vcpkg.json
+
